add adminclient related and admin example

--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -195,7 +195,7 @@
             <dependency>
                 <groupId>com.alipay.sofa.common</groupId>
                 <artifactId>sofa-common-tools</artifactId>
-                <version>1.4.0</version>
+                <version>${sofa-common-tools.version}</version>
             </dependency>
 
             <dependency>
