--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -391,6 +391,12 @@
 
             <dependency>
                 <groupId>org.dromara.dynamictp</groupId>
+                <artifactId>dynamic-tp-sdk</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dromara.dynamictp</groupId>
                 <artifactId>dynamic-tp-spring</artifactId>
                 <version>${revision}</version>
             </dependency>
