--- a/example/example-admin/pom.xml
+++ b/example/example-admin/pom.xml
@@ -4,16 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-example</artifactId>
+        <groupId>org.dromara.dynamictp</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
     <artifactId>dynamic-tp-example-admin</artifactId>
 
     <properties>
-
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencyManagement>
@@ -32,6 +31,10 @@
             <version>${revision}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-sdk</artifactId>
+        </dependency>
 
     </dependencies>
 
